rollback to use local .md file, add animation on navbar, add toast, add copy to clipboard–rollback if there is performance issues

--- a/.todo.md
+++ b/.todo.md
@@ -1,12 +1,25 @@
-kitsune development todo list
+# kitsune development todo list
 
 -  [x] migrate back use .md file for content management
--  [ ] add code alt text belo pre element
+-  [x] add code alt text belo pre element
+-  [x] reduce lineheight of <p>
+-  [ ] research chaining css animation
+   -  [ ] animate margin/position (?)
+   -  [ ] chain visibility: invisible, then display: none
 -  [ ] responsive image handling
    -  [ ] generate srcSet
    -  [ ] existing react component research(?)
+   -  [ ] https://cloudinary.com/blog/introducing_intelligent_responsive_image_breakpoints_solutions
 -  [ ] responsive image hosting
        existing resource:
-   -  [ ] cloudinary
+   -  [x] cloudinary
    -  [ ] imgur
 -  [ ] try strapi(?)
+
+---
+
+## Exciting feature
+
+-  [ ] implement lowdb for crud bookmark and reading list
+-  [ ] add auth firebase
+-  [ ] add smartsaving data mode
